# rewrite-it

./: .gitignore  Cargo.toml  README.md  app.css  docker-compose.yml  dockerfile.website
src/: main.rs
src/routes/: home.rs  hx.rs  mod.rs
src/service/: mod.rs  ollama.rs  rewrite_service.rs
templates/: base.html  home.html
