[package]
name = "rewrite-it"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
askama = "0.14.0"
axum = "0.8.4"
ollama-rs = "0.3.2"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
